# tingly-agent-shell

./: DESIGN.md  README.md  pyproject.toml  test_basic.py  test_env_tracking.py
examples/: advanced_features.py  basic_usage.py
tingly_agent_shell/: __init__.py  base.py  hooks.py  session_shell.py  state_shell.py  types.py
